<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Proyecto Pizarra</string>
    <string name="action_settings">Settings</string>
    <string name="label_bienvenido">Welcome!</string>
    <string name="label_login">Log In</string>
    <string name="label_registrarse">Sign In</string>
    <string name="title_activity_home">Home</string>
    <string name="title_home_activity">Home</string>
    <string name="hello_world">Hello world!</string>
    <string name="label_nombre_de_usuario">Username</string>
    <string name="label_introduzca_contrasena">Password</string>
    <string name="label_repita_contrasena">Repeat password</string>
    <string name="label_nombre">First Name</string>
    <string name="label_apellido">Last Name</string>
    <string name="label_correo">Email</string>
    <string name="label_telefono">Phone</string>
    <string name="label_crear_cuenta">Create account</string>
    <string name="dialog_confirm_logout">Do you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="label_lista_pizarras"><p>Projects</p></string>
    <string name="label_no_hay_pizarras"><b>No projects</b></string>
    <string name="label_nueva_pizarra">Create new project</string>
    <string name="title_activity_pizarra_details">PizarraDetailsActivity</string>
    <string name="label_nombre_pizarra">Name</string>
    <string name="label_descripcion_pizarra">Description</string>
    <string name="label_fechainicio_pizarra">Start date</string>
    <string name="label_fechafinal_pizarra">End Data</string>

</resources>