<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PizarraDetailsActivity" >

    <ScrollView
        android:id="@+id/view_pizarra_details"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tv_nombre_pizarra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_nombre_pizarra"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tv_nombre_pizarra_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>

			<TextView
                android:id="@+id/tv_descripcion_pizarra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_descripcion_pizarra"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tv_descripcion_pizarra_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            
            <TextView
                android:id="@+id/tv_fechainicio_pizarra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fechainicio_pizarra"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tv_fechainicio_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
            
            <TextView
                android:id="@+id/tv_fechafinal_pizarra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_fechafinal_pizarra"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/tv_fechafinal_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
    </ScrollView>

</LinearLayout>